--- a/styles/themeStyles.module.scss
+++ b/styles/themeStyles.module.scss
@@ -6,6 +6,7 @@ $green-2: #7BC5B6;
 $green-3: #D4ECE7;
 $yellow-1: #FFD658;
 $yellow-2: #FFDB6B; 
+$yellow-3: #ffe28a;
 $gray-1: #8197AC;
 $gray-2: #A7B6C5;
 $gray-3: #B4C1CE;
@@ -47,6 +48,13 @@ $white: #FFFFFF;
 
 @mixin font-level-5 {
     font-size: calc(12px + (30 - 12) * ((100vw - 1200px) / (3840 - 1200)));
+    @media screen and (max-width: 1024px){
+        font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1024 - 300)));
+    }
+}
+
+@mixin font-level-6 {
+    font-size: calc(10px + (20 - 10) * ((100vw - 1200px) / (3840 - 1200)));
     @media screen and (max-width: 1024px){
         font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1024 - 300)));
     }
