--- a/pages/novedades/[category]/title.module.scss
+++ b/pages/novedades/[category]/title.module.scss
@@ -88,19 +88,30 @@
 
         .share_btn{
             @include btn-ver-mas;
+            span{
+                display: flex;
+                align-items: center;
+                img{
+                    width: calc(14px + (34 - 14) * ((100vw - 1200px) / (3840 - 1200)));                       
+                    height: auto;
+                    margin-right: calc(10px + (26 - 10) * ((100vw - 1200px) / (3840 - 1200)));
+                    @media screen and (max-width: 1024px){
+                        width: calc(9px + (21 - 9) * ((100vw - 300px) / (1024 - 300))); 
+                        margin-right: calc(8px + (16 - 8) * ((100vw - 300px) / (1024 - 300))); 
+                    }
+                }
+            }
             margin-bottom: calc(35px + (105 - 35) * ((100vw - 1200px) / (3840 - 1200)));
             @media screen and (max-width: 1024px){
                 margin-bottom: calc(35px + (100 - 35) * ((100vw - 300px) / (1024 - 300))); 
             }
             @media screen and (min-width: 1024px){
                 &:hover{
-                    &.download{
-                        span{
-                            img{
-                                filter: grayscale(100%) brightness(20);     
-                            }
-                        }                                
-                    }
+                    span{
+                        img{
+                            filter: grayscale(100%) brightness(20);     
+                        }
+                    }                                
                 }
                 &:active{
                     filter: brightness(90%);
