--- a/pages/novedades/novedades.module.scss
+++ b/pages/novedades/novedades.module.scss
@@ -28,7 +28,13 @@
         ;
         margin-bottom: calc(65px + (214 - 65) * ((100vw - 1200px) / (3840 - 1200)));  
         @media screen and (max-width: 1024px){
-            margin-bottom: calc(50px + (150 - 50) * ((100vw - 300px) / (1024 - 300)));
+            padding: 
+            calc(20px + (50 - 20) * ((100vw - 300px) / (1024 - 300)))
+            0
+            calc(8px + (28 - 8) * ((100vw - 300px) / (1024 - 300)))
+            0
+            ;
+            margin-bottom: calc(25px + (100 - 25) * ((100vw - 300px) / (1024 - 300)));
         }
         .btn_filter{
             @include btn-ver-mas;
