--- a/pages/equipo/perfil.module.scss
+++ b/pages/equipo/perfil.module.scss
@@ -89,6 +89,29 @@
     }
 }
 
+.networks{
+    margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300)));
+                }
+    a{
+        @include font-level-4;
+                color: $gray-1;
+                font-weight: 400;
+                line-height: 144%;
+                text-decoration: none;
+                border-bottom: $line-1 solid transparent;
+
+                &:hover{
+                    color: $green-1;
+                    border-bottom: $line-1 solid $green-2;
+                  } 
+    }
+    strong{
+        padding: 0 10px;
+    }
+}
+
 .producciones{
     margin-bottom: calc(80px + (240 - 80) * ((100vw - 1200px) / (3840 - 1200)));
     @media screen and (max-width: 1024px){
