--- a/components/investigacion/ThemesAccordion/ThemesAccordion.module.scss
+++ b/components/investigacion/ThemesAccordion/ThemesAccordion.module.scss
@@ -62,8 +62,8 @@
                 &:hover{
                     transition: all .2s;
 
-                    h3{
-                        color: $deep-blue;
+                    .js_link{
+                        border: $line-1 solid $green-2;
                     }
                 }    
 
@@ -87,8 +87,8 @@
                     color: $deep-blue;
                     font-weight: 400;
                     font-size: calc(16px + (40 - 16) * ((100vw - 1200px) / (3840 - 1200)));
-                    width: calc(35px + (80 - 35) * ((100vw - 1200px) / (3840 - 1200)));
-                    height: calc(35px + (80 - 35) * ((100vw - 1200px) / (3840 - 1200)));
+                    width: calc(36px + (96 - 36) * ((100vw - 1200px) / (3840 - 1200)));
+                    height: calc(36px + (96 - 36) * ((100vw - 1200px) / (3840 - 1200))); 
                     top: 0;
                     right: 4px;
                     border-radius: 50%;
@@ -98,7 +98,7 @@
                     justify-content: center;
                     align-items: center;
                     text-decoration: none;
-                    border: $line-1 solid transparent;
+                    border: $line-1 solid transparent;                    
                     @media screen and (max-width: 1024px){
                         width: calc(30px + (60 - 30) * ((100vw - 300px) / (1024 - 300)));
                         height: calc(30px + (60 - 30) * ((100vw - 300px) / (1024 - 300))); 
