Ajuste background-color Body

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,6 +26,10 @@ html, body, #__next {
     }
 }
 
+body{
+  background-color: $white;
+}
+
 button{
     background-color: transparent;
     outline: inherit;
